提取公用包库

--- a/conf/app.ini
+++ b/conf/app.ini
@@ -11,6 +11,7 @@ APP_KEY = "!@)*#)!@U#@*!@!"
 ADBUTLER_API_KEY = "!@)*#)!@U#@*!@!"
 ADMIN_EMAIL = 122385930@qq.com
 SUPPORT_EMAIL = 122385930@qq.com
+UPLOAD_FILE_BASE_PATH = "./static/files"
 
 [server]
 HTTP_PORT = 8000
