添加证书生成

--- a/conf/auth.yml
+++ b/conf/auth.yml
@@ -1,10 +1,15 @@
-installed:
-  client_id:
-  project_id:
-  auth_uri:
-  token_uri:
-  auth_provider_x509_cert_url:
-  client_secret:
-  redirect_uris:
-    - urn:ietf:wg:oauth:2.0:oob
-    - http://localhost
+# installed:
+#   client_id:
+#   project_id:
+#   auth_uri:
+#   token_uri:
+#   auth_provider_x509_cert_url:
+#   client_secret:
+#   redirect_uris:
+#     - urn:ietf:wg:oauth:2.0:oob
+#     - http://localhost
+Organization:     
+  - "Manning Publications Co.",
+OrganizationalUnit: 
+  - "Books",
+CommonName: "Go Web Programming",
