添加证书认证

--- a/conf/app.ini
+++ b/conf/app.ini
@@ -18,13 +18,13 @@ HTTP_PORT = 8000
 READ_TIMEOUT = 60
 WRITE_TIMEOUT = 60
 
-[database]
-TYPE = mysql
-USER = root; 数据库账号
-PASSWORD = wlza2021; 数据库密码
-HOST = 127.0.0.1:3306; 数据库IP:数据库端口号
-NAME = ipv6
-TABLE_PREFIX = ; ipv6_
-CHARSET = utf8
-PARSE_TIME = True
-LOC = Local 
+; [database]
+; TYPE = mysql
+; USER = root; 数据库账号
+; PASSWORD = wlza2021; 数据库密码
+; HOST = 127.0.0.1:3306; 数据库IP:数据库端口号
+; NAME = ipv6
+; TABLE_PREFIX = ; ipv6_
+; CHARSET = utf8
+; PARSE_TIME = True
+; LOC = Local 
