--- a/conf/database.yml
+++ b/conf/database.yml
@@ -6,3 +6,12 @@ tablePrefix: ""
 charset: utf8
 parseTime: "True"
 loc: Local
+
+# type: postgresql
+# host: localhost
+# port: 5432
+# user: postgres
+# password: wlza2021
+# dbname: quad
+# sslmode: disable
+# TimeZone: Asia/Shanghai
