--- a/conf/database.yml
+++ b/conf/database.yml
@@ -1,15 +1,15 @@
 type: mysql
 username: root
 password: wlza2021
-dbName: ipv6
+dbName: low_code_platform
 tablePrefix: ""
 charset: utf8
 parseTime: "True"
 loc: Local
 
 # type: postgresql
-# host: localhost
-# port: 5432
+# host: 172.16.0.39 # localhost
+port: 13306 #5432
 # user: postgres
 # password: wlza2021
 # dbname: quad
